# labs

./: .gitmodules  binarytext.c  file2.txt  gradus  gradus.c  spiski2.c  text.txt  textfiles.c  vis  vis.c
2semestr/: structST4.c
2semestr/lab6/: a.out  abonent.c  abonent.h  dynamic_exe  libmy_lib.dylib  main.c  static_exe
2semestr/lab8/: CMakeLists.txt  math  math.c
2semestr/lab8/src/: math_utils.c  math_utils.h
2semestr/lab8/tests/: test_math_utils.c
2semestr/potoki(lab7)/: laba7.md  potoki  potoki.c  potoki.csv  potoki.py
2semestr/rgr/: CMakeLists.txt  TranslateProg  TranslateProg.c  dictionary.txt  test_translator.c  text_eng.txt  text_rus.txt  translator.c  translator_utils.c  translator_utils.h
gitlab/: file.txt  greeting.txt  mergesort.py  screenshots.docx  sort.c
lab10/: functions.c  glavny.c  makefile  parabolalab  struct  struct.c  test.c  zagolovokfiles.h
lab3/: 13alg  13alg.c  14alg  14alg.c  15alg  15alg.c  16alg  16alg.c  17alg  17alg.c
lab4/: star  star.c
lab5/: lab51BIT.c  lab52BIT.c
lab6/: lab61  lab61.c
lab7/: lab7  lab7.c
lab8/: 8ulitka  8ulitka.c  lab8  lab8.c
lab9/: lab9  lab9.c  test  test.c
